nlamah/src/main/resources/org/nlamah/QL/test/error/expressionTypeMismatch.ql
form test
{
	if (yes > 3)
	{
	}
}